# bobi_lurebot_interface

./: .gitmodules  CMakeLists.txt  README.md  package.xml
config/: fishbot_1.yaml  fishbot_2.yaml  fishbot_3.yaml
config/test/: timed_motor_vel.yaml
include/bobi_fishbot_interface/: fishbot_ble_details.hpp
include/bobi_lurebot_interface/: lurebot_ble_details.hpp
launch/: fishbot_1.launch  fishbot_2.launch  fishbot_3.launch  fishbot_dummy.launch  lurebot_dummy.launch
launch/test/: timed_motor_vel.launch
scripts/: main.conf  set_connection_params.sh
src/: fishbot_dummy_interface_node.cpp  fishbot_interface_node.cpp  lurebot_dummy_interface_node.cpp  lurebot_interface_node.cpp
src/test/: timed_motor_vel.cpp
